# fastService

./: .env.example  .env.production  .env.test  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Dockerfile.dev  Makefile  README.md  SECURITY.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
alembic/: env.py
scripts/: new_module.py
src/app/: main.py  router.py
src/app/cli/: __init__.py  utils.py
src/app/cli/commands/: __init__.py  db.py  dev.py  seed.py  server.py
src/app/config/: __init__.py  base.py  database.py
src/app/infrastructure/: __init__.py  context.py  database.py  exceptions.py  lifespan.py  middleware.py  model.py  repository.py  types.py
src/app/infrastructure/constants/: __init__.py  cache.py  health.py  http.py  pagination.py  seeder.py
src/app/infrastructure/core/: __init__.py  context.py  health.py  lifespan.py  setup.py
src/app/infrastructure/core/middleware/: __init__.py  db_session.py  logging.py  request_id.py
src/app/infrastructure/messaging/: __init__.py  cache.py  events.py  tasks.py
src/app/infrastructure/observability/: __init__.py  logging.py
src/app/infrastructure/persistence/: __init__.py  document.py  model.py  service.py
src/app/infrastructure/persistence/adapters/: __init__.py  mongo.py  protocols.py  redis.py  registry.py  sqlalchemy.py
src/app/infrastructure/persistence/repository/: __init__.py  dialect.py  protocols.py  type_protocols.py
src/app/infrastructure/persistence/repository/document/: __init__.py  base.py
src/app/infrastructure/persistence/repository/kv/: __init__.py  base.py
src/app/infrastructure/persistence/repository/sql/: __init__.py  base.py  mixins.py
src/app/infrastructure/web/: __init__.py  ratelimit.py  websocket.py
src/app/infrastructure/web/exceptions/: __init__.py  base.py  handlers.py  http.py
src/app/infrastructure/web/pagination/: __init__.py  params.py  result.py  schemas.py  utils.py
src/app/modules/todos/: __init__.py  dependencies.py  model.py  repository.py  router.py  schemas.py  seeder.py  service.py
src/app/seeders/: __init__.py
tests/: conftest.py  factories.py  test_document.py  test_todos.py
tests/adapters/: test_mongo.py  test_redis.py  test_sqlalchemy.py
tests/repositories/: test_document.py  test_kv.py  test_sql.py
