[project]
name = "fastapi-service-boilerplate"
version = "0.1.0"
description = "Production-ready FastAPI boilerplate with clean architecture"
readme = "README.md"
license = "MIT"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "aiosqlite>=0.20.0",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "structlog>=24.4.0",
    "redis>=5.2.0",
    "arq>=0.26.0",
    "slowapi>=0.1.9",
    "typer>=0.15.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.28.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pre-commit>=4.0.0",
    "fakeredis>=2.26.0",
]

mongo = [
    "motor>=3.6.0",
]

[project.scripts]
app = "app.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = "-v"

[tool.ruff]
target-version = "py313"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "B",
    "C4",
    "UP",
    "ARG",
    "SIM",
]
ignore = [
    "B008",
    "UP046",
]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.mypy]
python_version = "3.13"
strict = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "arq.*",
    "slowapi.*",
    "motor.*",
    "motor.motor_asyncio",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "app.infrastructure.persistence.repository.kv.base",
    "app.infrastructure.persistence.repository.document.base",
    "app.infrastructure.persistence.adapters.mongo",
]
disable_error_code = ["no-any-return", "misc", "attr-defined", "return-value", "import-not-found"]

[[tool.mypy.overrides]]
module = "tests.adapters.test_redis"
disable_error_code = ["misc"]

[tool.coverage.run]
source = ["src/app"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.28.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pre-commit>=4.0.0",
    "fakeredis>=2.26.0",
]
